Add specific support for JDK 16
JDK 16 is then tested with both Gradle 6 and Gradle 7